# tabnews-clone

./: .gitignore  README.md
backend/: .env  Cargo.toml  README.md
backend/migrations/: 20231026000000_create_tables.sql
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs
frontend/: README.md  angular.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: styles.css
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/core/components/: navbar.component.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/services/: auth.service.ts  post.service.ts  theme.service.ts
frontend/src/app/features/auth/: login.component.ts  register.component.ts
frontend/src/app/features/posts/: post-detail.component.ts  post-list.component.ts
